--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>The last of us</h1>
     </header>
     <section class="banner">
-        <img src="/my project/images/banner.png" alt="welcome banner">
+        <img src="/images/banner.png" alt="welcome banner">
         <div class="welcome">
             <h2>Welcome to <br> <span>game world</span></h2>
         </div>
