--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>The last of us</h1>
+        <h1>The Last of Us</h1>
     </header>
     <section class="banner">
         <img src="/images/banner.png" alt="welcome banner">
         <div class="welcome">
-            <h2>Welcome to <br> <span>game world</span></h2>
+            <h2>Welcome to <br> <span>GAME WORLD</span></h2>
         </div>
     </section>
     <nav class="main-nav">
